argocd/apps/nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  tls:
    - hosts:
      - test.k.zee.im
      secretName: test-tls
  ingressClassName: nginx
  rules:
  - host: test.k.zee.im
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
